2007-03-16  Mark Wielaard  <mark@klomp.org>

	* configure.ac (COMPILE_PLUGIN): Stop when no plugin headers found.
	Also check for gtk+ dependency.

2007-03-16  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/javah/JniStubPrinter.java
	(printClass): Added filename argument.
	* tools/gnu/classpath/tools/javah/JniIncludePrinter.java
	(printClass): Added filename argument.
	* tools/gnu/classpath/tools/javah/CniIncludePrinter.java
	(printClass): Use user's file name.
	* tools/gnu/classpath/tools/javah/CniStubPrinter.java
	(printClass): Use user's file name.
	* tools/gnu/classpath/tools/javah/Printer.java (printClass): Added
	filename argument.
	* tools/gnu/classpath/tools/javah/Main.java (getParser): Fix '-v'
	argument order.
	(writeHeaders): Use a HashMap.
	(run): Put class name into HashMap for writeHeaders.

2007-03-16  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(cairoArc): Make protected rather than private so it can be over-ridden.
	(cairoClip): Likewise.
	(cairoClosePath): Likewise.
	(cairoCurveTo): Likewise.
	(cairoDrawGlyphVector): Likewise.
	(cairoFill): Likewise.
	(cairoLineTo): Likewise.
	(cairoMoveTo): Likewise.
	(cairoNewPath): Likewise.
	(cairoRectangle): Likewise.
	(cairoResetClip): Likewise.
	(cairoRestore): Likewise.
	(cairoSave): Likewise.
	(cairoScale): Likewise.
	(cairoSetAntialias): Likewise.
	(cairoSetDash): Likewise.
	(cairoSetFillRule): Likewise.
	(cairoSetFont): Likewise.
	(cairoSetLine): Likewise.
	(cairoSetMatrix): Likewise.
	(cairoSetOperator): Likewise.
	(cairoSetRGBAColor): Likewise.
	(cairoStroke): Likewise.
	(drawPixels): Likewise.
	(init): Likewise.
	(setGradient): Likewise.
	(setPaintPixels): Likewise.
	(cairoDrawLine): Removed.
	(cairoDrawRect): Removed.
	(cairoFillRect): Removed.
	(cairoPreserveClip): Removed.
	(cairoRelCurveTo): Removed.
	(cairoRelLineTo): Removed.
	(cairoRelMoveTo): Removed.
	* gnu/java/awt/peer/gtk/ComponentGraphics.java