@@ -704,7 +704,6 @@ AC_ARG_WITH([ecj-jar],
   	    [ECJ_JAR=$withval]
   	    )
 AC_SUBST(ECJ_JAR)
-AM_CONDITIONAL(FOUND_ECJ_JAR, test -n "$ECJ_JAR")
 
 dnl -----------------------------------------------------------
 dnl Should the VM explicitly run class initialization subfunctions for
